# warp

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: codeql.yml  test.yml
benchmarks/: CMakeLists.txt
benchmarks/mqtt/: codec.cpp
cmake/: warp-config.cmake.in
include/warp/: server.h  warp.h
include/warp/http/: server.h
include/warp/mqtt/: client.h  codec.h  message.h  server.h
include/warp/utils/: signal.h
include/warp/websocket/: handler.h
src/: main.cpp
src/warp/: server.cpp  warp.cpp
src/warp/http/: server.cpp
src/warp/mqtt/: client.cpp  codec.cpp  message.cpp  server.cpp
src/warp/utils/: signal.cpp
src/warp/websocket/: handler.cpp
tests/: CMakeLists.txt  warp_test.cpp
tests/mqtt/: client_test.cpp  codec_test.cpp  message_test.cpp  server_test.cpp
